--- a/webapps/icloud/WEB-INF/classes/db.properties
+++ b/webapps/icloud/WEB-INF/classes/db.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/icloud
+jdbc.url=jdbc:mysql://localhost:3306/SkyCloud
 jdbc.username=root
-jdbc.password=root
+jdbc.password=123456
